--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -4,14 +4,14 @@ section.nl-section.nl-create-team.homepage-field
 			div.col-md-8.offset-md-2.col-lg-12.col-xl-12.offset-lg-0.offset-xl-0
 				h5 MY TEAMS
 			div.col-md-12.col-lg-12.col-xl-12
-				form.form-signin
+				form.form-signin.dropdown-my-teams
 					.input-group
 						select#country.form-control.custom-select(placeholder='COUNTRY', required='')
-							option(selected='' disabled='' hidden='') COUNTRY
-							option USA
-							option CANADA
-							option UK
-							option PORTUGAL 
+							option(selected='' disabled='' hidden='') Main best NFL Team!
+							option Other amazing team name1!
+							option Other amazing team name2!
+							option Other amazing team name3!
+							option Other amazing team name4! 
 
 				div.nl-team-button
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
