--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -69,47 +69,47 @@ div.tab-content(id="top5-manager-content")
                             a.nav-link.active(data-toggle="tab" href="#manager1" role="tab")
                                 div.menu-item.top-5
                                     div.players 
-                                        div.player-thumbnail
+                                        div.manager-thumbnail.manager-1
                                         div.number
                                             p 1
-                                        div.player-thumbnail-name
-                                            p MattRyan1
+                                        div.manager-thumbnail-name
+                                            p Rafael
                         li.nav-item
                             a.nav-link(data-toggle="tab" href="#manager2" role="tab")
                                 div.menu-item.top-5
                                     div.players 
-                                        div.player-thumbnail
+                                        div.manager-thumbnail.manager-2
                                         div.number
                                             p 2
-                                        div.player-thumbnail-name
-                                            p MattRyan2
+                                        div.manager-thumbnail-name
+                                            p Oscar
                         li.nav-item
                             a.nav-link(data-toggle="tab" href="#manager3" role="tab")
                                 div.menu-item.top-5
                                     div.players 
-                                        div.player-thumbnail
+                                        div.manager-thumbnail.manager-3
                                         div.number
                                             p 3
-                                        div.player-thumbnail-name
-                                            p MattRyan3
+                                        div.manager-thumbnail-name
+                                            p Dan
                         li.nav-item
                             a.nav-link(data-toggle="tab" href="#manager4" role="tab")
                                 div.menu-item.top-5
                                     div.players 
-                                        div.player-thumbnail
+                                        div.manager-thumbnail.manager-4
                                         div.number
                                             p 4
-                                        div.player-thumbnail-name
-                                            p MattRyan4
+                                        div.manager-thumbnail-name
+                                            p Nicholas
                         li.nav-item
                             a.nav-link(data-toggle="tab" href="#manager5" role="tab")
                                 div.menu-item.top-5
                                     div.players 
-                                        div.player-thumbnail
+                                        div.manager-thumbnail.manager-5
                                         div.number
                                             p 5
-                                        div.player-thumbnail-name
-                                            p MattRyan5
+                                        div.manager-thumbnail-name
+                                            p Anthony
 
 
                     div.tab-content
@@ -120,7 +120,7 @@ div.tab-content(id="top5-manager-content")
                                         div.number
                                             p 1
                                         div.name
-                                            p Matt Ryan1
+                                            p Rafael Groswirt
                                         p.points 121.5 PTS 
                                 div.manager-section
                                     div.manager-info
