--- a/markup/_layouts/_content/_homepage/upcoming_contest.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest.jade
@@ -7,13 +7,13 @@ div.row
         div.nl-players-table.nl-contests-table.homepage-table
 
             ul.nav.nav-tabs(role="tablist")
-                li.nav-item
+                li.nav-item.smaller-nav
                     a.nav-link.active(data-toggle="tab" href="#all" role="tab") NLC2
-                li.nav-item
+                li.nav-item.smaller-nav
                     a.nav-link(data-toggle="tab" href="#gk" role="tab") Free
-                li.nav-item
+                li.nav-item.smaller-nav
                     a.nav-link(data-toggle="tab" href="#d" role="tab") Private
-                li.nav-item
+                li.nav-item.bigger-nav
                     a.nav-link(data-toggle="tab" href="#f" role="tab") My&nbsp;contests
 
 
@@ -124,7 +124,42 @@ div.row
                                             td
 
                                             td.st-full FULL
-                                
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+
+                                            td.st-full FULL
 
                 div.tab-pane(id="gk" role="tabpanel") TAB2
                 div.tab-pane(id="d" role="tabpanel") TAB3
