--- a/markup/_layouts/_content/homepage-content.jade
+++ b/markup/_layouts/_content/homepage-content.jade
@@ -12,13 +12,13 @@ section.nl-section.homepage
 				img(src="assets/img/mma.png", alt="", class="sports")
 
 
-		div.row
+		div.row.top-5-section
 			div.col-lg-6.col-xl-5.position
 				include _homepage/top5-player
 			div.col-lg-6.offset-xl-1.col-xl-6.week
 				include _homepage/top5-manager
 
-		div.row
+		div.row.bottom-teams-contests-section
 			div.col-lg-6.col-xl-5.field
 				include _homepage/field
 			div.col-lg-6.offset-xl-1.col-xl-6.contests
