--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -63,7 +63,7 @@ header.nl-header-log
                                         a.sport-link.dropdown-item(href="#" data-sports="tennis") <span>Tennis</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
 
                                 li.nav-item
-                                    a.nav-link(href="#") HOME
+                                    a.nav-link(href="homepage.html") HOME
                                 li.nav-item
                                     a.nav-link(href="my_teams.html") MY TEAMS
                                 li.nav-item
